[metadata]
name = KongMing
summary = Distributed Acceleration Management as a Service
description-file =
    README.rst
author = Zhenyu Zheng
author-email = zheng.zhenyu@outlook.com
home-page = https://github.com/zhengzhenyu/KongMing
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5

[files]
packages =
    KongMing

[entry_points]
oslo.policy.policies =
    KongMing.api = KongMing.common.policy:list_policies

console_scripts =
    KongMing-api = KongMing.cmd.api:main
    KongMing-conductor = KongMing.cmd.conductor:main


cyborg.database.migration_backend =
    sqlalchemy = KongMing.db.sqlalchemy.migration

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cyborg/locale
domain = cyborg

[update_catalog]
domain = cyborg
output_dir = cyborg/locale
input_file = cyborg/locale/cyborg.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cyborg/locale/cyborg.pot
