[metadata]
name = kongming
summary = VCPU location optimization as a Service
description-file =
    README.rst
author = Zhenyu Zheng
author-email = zheng.zhenyu@outlook.com
home-page = https://github.com/zhengzhenyu/KongMing
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5

[files]
packages =
    kongming

[entry_points]
oslo.policy.policies =
    kongming.api = kongming.common.policy:list_policies

console_scripts =
    kongming-api = kongming.cmd.api:main
    kongming-executor = kongming.cmd.executor:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kongming/locale
domain = kongming

[update_catalog]
domain = kongming
output_dir = kongming/locale
input_file = kongming/locale/kongming.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kongming/locale/kongming.pot
